styles.css
@font-face {
    font-family: Hero-light;
    src: url(./fonts/Hero-Light.otf);
    font-weight: lighter;
}

@font-face {
    font-family: Hero;
    src: url(./fonts/Hero-Regular.otf);
}


@font-face {
    font-family: Hero;
    src: url(./fonts/Hero-Bold.otf);
    font-weight: bold;
}



body {
    display: flex;
    flex-direction: column;
    margin: 0;
    font-family: Hero;
}

a {
    text-decoration: none;
    color: white;
    font-family: Hero;
}

.header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: #1F2937;
    color:white;
    padding: 0 100px 0 100px;
    margin: 0;
}

.logo {
    font-weight: bold;
}

.header-links {
    display: flex;
    justify-content: space-between;
    list-style-type: none;
    gap: 10px;
}

.title-block {
    display: flex;
    flex-direction: row;
    justify-content: center;
    background-color: #1F2937;
    padding: 50px 100px 50px 100px;
    gap: 50px;
}

.about {
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    color:white;
    flex: 0 1 450px;
}
.main-title {
    font-size: 48px;
    font-weight: bolder;
}
.kasumi {
    display: flex;
    justify-content: center;
    align-items: center;
    box-sizing: border-box;
    background-color: darkgrey;
    color: white;
    flex: 0 1 450px;
    height: auto;
}

.button {
    margin-top: 8px;
    width: fit-content;
    padding: 3px 18px 3px 18px;
    background-color: #3882f6;
    color: white;
    font-weight: bold;
    border-color: #3882f6;
    border-radius: 10px;
}

.info-con {
    display: flex;
    flex-direction: column;
    padding: 30px 100px 100px 100px;
}

.card-header {
    display: flex;
    justify-content: center;
    font-size: 36px;
    font-weight: bold;
    margin-bottom: 50px;
}

.info-block {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    gap: 50px;
}

.card-con {
    display: flex;
    flex-direction: column;
    border-radius: 1px;
    border-color: #3882f6;
    align-items: center;
    flex: 0 0 0;
    gap: 5px;
}

.card {
    border: 5px solid #3882f6;
    width: 150px;
    height: 150px;
    border-radius: 20px;
}

.description {
    text-align: center;
}

.quote-block {
    display: flex;
    background-color: #E5E7EB;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    flex-wrap: wrap;
    padding: 80px 100px 40px 100px;
}

.quote {
    display: flex;
    flex-wrap: wrap;
    font-family: Hero-light;
    text-align: left;
    font-weight: lighter;
    font-size: 36px;
    max-width: 710px;
    height: auto;
}
.author {
    align-self: flex-end;
}

.signup-block {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    padding: 80px 100px 80px 100px;
}

.signup-con {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    background-color: #3882f6;
    color: white;
    border-radius: 20px;
    padding: 30px 80px 30px 80px;
    flex: 0 1 700px;
    height: 300;
}.button-2 {
    display: flex;
    align-self: flex-end;
    background-color: #3882f6;
    color: white;
    border-color: white;
    border-radius: 8px;
    padding: 2px 20px 2px 20px;
}

.footer {
    background-color: #1F2937;
    color: white;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 25px 0px 25px 0px;
}

